<resources>
    <string name="app_name">Fiji Rental Cars</string>
    <string name="best_prices">We are open to offer you the best prices in town for rent a car! sed to eiumod tempor incididunt
    labore et dolore magna aliqua ut enim genh.</string>
    <string name="reserve_anytime">You can reserve a car anytime you want(24/7).sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.
    </string>
    <string name="facebook_app_id">351170359346313</string>
    <string name="fb_login_protocol_scheme">fb351170359346313</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_horizontal_calendar">Horizontal Calendar</string>
    <string name="title_activity_vertical_calendar">Vertical Calendar</string>
    <string name="title_activity_depart_return">Start and End Date</string>
    <string name="select_date">Select date</string>
    <string name="first_name">First name</string>
    <string name="full_name">Full name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="ok">Ok</string>
    <string name="error_firstname">Please Enter First Name</string>
    <string name="error_lastname">Please Enter Last Name</string>
    <string name="error_cityname">Please Enter City Name</string>
    <string name="error_Suburbname">Please Enter Suburb</string>
    <string name="error_business_license">Please Select Business license</string>
    <string name="error_transport_license">Please Select Transport license</string>
    <string name="error_email">Please Enter Email Id</string>
    <string name="error_validemail">Please Enter Valid Email</string>
    <string name="error_pws">Please Enter Password</string>
    <string name="error_pws_length">Password must be 4 characters</string>
    <string name="error_phone">Please Enter Phone Number</string>
    <string name="error_phone_length">Phone Number must be 4 characters</string>
    <string name="loading">Loading</string>
    <string name="profile_fetch">Fetching Profile</string>
    <string name="web_client_id">322897093175-b3n8sidpu73869bpd0a2ddivu1e0pumv.apps.googleusercontent.com</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip_review">Trip reviews</string>
    <string name="guidelines">Guidelines</string>
    <string name="faqs">FAQs</string>
    <string name="reviews">Reviews</string>
    <string name="vin_not_recognized">VIN not recognized</string>
    <string name="invalid_vin_length">Your VIN sholud be 17 characters long. Please double-check and try again</string>
    <string name="double_check_vin">Please double-check your VIN and try again.</string>
    <string name="vehicle_not_identified">Vehicle not identified</string>
    <string name="could_not_find">We couldn\'t identify your vehicle based on your VIN.Please enter your vehicle details.</string>
    <string name="adjustpin_location">Adjust the pin if this doesn\'t match your cars exact location.</string>
    <string name="drag_map">Drag the map, or pinch to zoom</string>
    <string name="unchec_title">In order to list your car, you must select the checkbox labeled My car has never had a branded or salvage title.</string>
    <string name="permission_camera_rationale">Need camera permission for scan vin number</string>
    <string name="low_storage_error">Low storage</string>
    <string name="no_camera_permission">Permission Not Granted</string>
    <string name="personilize_msg">Tell us more about you goal on Fijirental, your trip preferences and your car. We\'ll suggest settings to help you get trips that work for you and maximizeyour earning.</string>
    <string name="your_goals">Your goals</string>
    <string name="earning_goal">What is your primary financial goal for sharing this car on Turo?</string>
    <string name="cover_payment">Cover your car payment</string>
    <string name="generate_side">Generate side income</string>
    <string name="expand_business">Expand an existing business</string>
    <string name="build_source">Build a primary source of income</string>
    <string name="not_sure">Not sure yet</string>
    <string name="how_often_user_car">How often do you or your family currently use this car?</string>
    <string name="never">Never</string>
    <string name="rarely_once">Rarely: once a week or less</string>
    <string name="sometime_week">Sometimes: a few days per week</string>
    <string name="often_week">Often: most days per week</string>
    <string name="always_week">Always: every day</string>
    <string name="often_share">How often do you want to share your car?</string>
    <string name="not_sure_curios">Not sure yet or just curious</string>
    <string name="rarely_month">Rarely: a few times per month</string>
    <string name="sometime_month">Sometimes: about half the month</string>
    <string name="often_month">Often: most of the month</string>
    <string name="always_month">Always: as often as possible</string>
    <string name="advance_notice">Advance notice</string>
    <string name="need_notice_before">How much advance notice do you need before a trip starts?</string>
    <string name="hour_1">1 hour</string>
    <string name="hour_2">2 hours</string>
    <string name="hour_3">3 hours</string>
    <string name="hour_6">6 hours</string>
    <string name="hour_12">12 hours</string>
    <string name="day_1">1 day</string>
    <string name="min_trip_duration">Minimum trip duration</string>
    <string name="shortest_trip">What\'s the shortest possible trip you\'ll accept?</string>
    <string name="day_2">2 days</string>
    <string name="day_3">3 days</string>
    <string name="day_5">5 days</string>
    <string name="max_trip_duration">Maximum trip duration</string>
    <string name="longest_trip">What\'s the longest possible trip you\'ll accept?</string>
    <string name="week_1">1 week</string>
    <string name="week_2">2 weeks</string>
    <string name="any">Any</string>
    <string name="month_1">1 month</string>
    <string name="month_3">3 months</string>
    <string name="cancel">Cancel</string>
    <string name="enter_old_pass">Enter old password</string>
    <string name="new_pass">New password</string>
    <string name="re_new_pass">Re-enter new password</string>
    <string name="apply">Apply</string>
    <string name="notification_setting">Notification settings</string>
    <string name="mob_notification">Mobile Notifications</string>
    <string name="text_msg">Text messages</string>
    <string name="email_notification">Email notifications</string>
    <string name="promtion">Promotions and announcements</string>
    <string name="app_notification">App notifications</string>
    <string name="turn_on_notification">Turn app notifications on or off here</string>
    <string name="car_features">Car features</string>
    <string name="featue_sub">Apple CarPlay is a registered trademark of Apple Inc.\nAndroid is a trademark of Google LLC.</string>
    <string name="description">Description</string>
    <string name="tell_guest">Tell guests what makes your car unique and why they\'ll love driving it.</string>
    <string name="channel_name">Upload_channel</string>
    <string name="channel_description">Upload image</string>
    <string name="licence_plate">License plate</string>
    <string name="licence_plate_sub">Your license plate information won\'t be publicly visible</string>
    <string name="safety_msg">We strive to maintain a safe and reliable car sharing community. As a host, you\'re expected to uphold these standards.</string>
    <string name="safety_msg_1">Keep your car well maintained so your guests are safe on road.</string>
    <string name="safety_msg_2">Clean and refuel your car before every trip so guests have enjoyable experience.</string>
    <string name="safety_msg_3">Turo doesn\'t permit hosts to list the same car on other sharing platforms so guests can count on a consistent experience.</string>
    <string name="submit_listing">Submit your listing</string>
    <string name="submit_msg">You\'re ready to list your car on Turo! You\'ll be able to edit your listing, pricing, and availability anytime.</string>
    <string name="report_listing">Report listing</string>
    <string name="cancellation_policy">Cancellation policy</string>
    <string name="inappro">Inappropriate/offensive content</string>
    <string name="misleading">Misleading/suspicious information</string>
    <string name="spam">Spam</string>
    <string name="other">Other</string>
    <string name="guest_instruct">Guest Instructions</string>
    <string name="welcom_msg_guest">Share a brief greeting with your guests during their check-in. It\'s a great way to add a friendly touch if you don\'t meet your guests in person.\n\nFor example \"Thanks for booking with me! Feel free to contact me if there\'s anything I can help with. Have a great trip!\"</string>
    <string name="car_guide_guest">Share any quirks or tips about operating your car, like how to charge your electric car or put the top down on your convertible.</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="quantity">Quantity</string>
    <string name="extra_msg">Your description will appear on your vehicle listing page. Turo\'s protection plans do not cover Extras, so share clear instructions and set expectations with your guests. You\'ll earn 90% of the price.</string>
    <string name="price">Price</string>
    <string name="distance_included">Distance included</string>
    <string name="distance_msg">Discover how to use your distance settings to attract more bookings and sharpen your competitive advantage.</string>
    <string name="learn_more">Learn more</string>
    <string name="unlimited_distance">Unlimited distance</string>
    <string name="distance_msg_2">Get a special badge and attract more bookings by offering unlimited distance! With unlimited distanc, guest fell more at ease and often don\'t drive farther than they need.</string>
    <string name="distance_msg_on">Awesome! You\'ve optimized your distance settings and will get an \"Unlimited distance\" badge on your vehicle listing!</string>
    <string name="daily_distance_included">Daily distance included</string>
    <string name="decide_far_msg">Decide how far you\'ll allow your guest to drive -- the minimum distance per day is determined based on the value of your vehicle. Higher value vehicles that qualify for Deluxe and Super Delux Class can set lower daily distances.</string>
    <string name="more_mile_msg">More miles mean more guests!\nOffering 250+ miles open you up to an additional 10% of guest bookings.</string>
    <string name="additonal_distance">Additional distance fee</string>
</resources>