<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotifiactionSetting">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />


        <com.app.fijirentalcars.CustomViews.CustomTextView_Poppins_Bold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:layout_toRightOf="@+id/iv_back"
            android:gravity="center_vertical"
            android:letterSpacing="0.02"
            android:text="@string/notification_setting"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        android:paddingStart="@dimen/_8sdp"
        android:paddingRight="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notification_setting"
            android:orientation="vertical">

            <com.app.fijirentalcars.CustomViews.CustomTextView_Poppins_SemiBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/app_notification"
                android:textColor="@color/black" />

            <com.app.fijirentalcars.CustomViews.CustomTextView_Poppins_SemiBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/turn_on_notification"
                android:textColor="@color/black4"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>


        <com.app.fijirentalcars.CustomViews.CustomTextView_Poppins_SemiBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/mob_notification"
            android:textAllCaps="true"
            android:textColor="@color/black4" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/text_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:button="@drawable/checkbox_selection_check"
            android:padding="@dimen/_5sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/text_msg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/black4" />

        <com.app.fijirentalcars.CustomViews.CustomTextView_Poppins_SemiBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/email_notification"
            android:textAllCaps="true"
            android:textColor="@color/black4" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/email_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:button="@drawable/checkbox_selection_check"
            android:padding="@dimen/_5sdp"
            android:paddingStart="@dimen/_8sdp"
            android:text="@string/promtion" />


    </LinearLayout>

</RelativeLayout>