<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/_8sdp"
    android:paddingRight="@dimen/_8sdp">

    <com.app.fijirentalcars.CustomViews.CustomTextView_Poppins_Bold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:padding="@dimen/_5sdp"
        android:text="Password"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

    <com.app.fijirentalcars.CustomViews.CustomEditText_Poppins_SemiBold
        android:id="@+id/et_old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="textPassword"
        android:textSize="@dimen/_10sdp"
        android:hint="@string/enter_old_pass"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/black" />

    <com.app.fijirentalcars.CustomViews.CustomEditText_Poppins_SemiBold
        android:id="@+id/et_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:inputType="textPassword"
        android:textSize="@dimen/_10sdp"
        android:hint="@string/new_pass"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/black" />

    <com.app.fijirentalcars.CustomViews.CustomEditText_Poppins_SemiBold
        android:id="@+id/et_new_pass_re"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_new_pass"
        android:layout_marginTop="@dimen/_8sdp"
        android:inputType="textPassword"
        android:textSize="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp">

        <com.app.fijirentalcars.CustomViews.CustomTextView_Poppins_SemiBold
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/green" />

        <com.app.fijirentalcars.CustomViews.CustomTextView_Poppins_SemiBold
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/green" />

    </LinearLayout>


</LinearLayout>